# psyserver

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example/: psyserver.toml
example/experiments/exp_cute/: index.html  log_data.py
example/studies/exp_cute/: main_script.js
psyserver/: __init__.py  __main__.py  db.py  init.py  main.py  run.py  settings.py
psyserver/example/: psyserver.service  psyserver.toml
tests/: conftest.py  test_init.py  test_main.py
