[project]
name = "psyserver"
authors = [
    {name = "Gabriel Kressin Palacios", email = "gabriel.kressin@homtail.de"},
]
description = "A server to host your online studies on."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {"file" = "LICENSE"}
keywords = ["experiments", "studies", "behavioral", "online", "server"]
dependencies = [
    "fastapi[all]>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.40.0,<0.41.0",
    "python-multipart",
    "requests",
]
dynamic = ["version"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Home = "https://github.com/GabrielKP/psyserver"

[project.scripts]
psyserver = "psyserver:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "coverage",
    "flit",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["psyserver"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "E501"]
ignore = ["F401"]
